--- a/XBB/Xqiye/app/views/stations/show.html.slim
+++ b/XBB/Xqiye/app/views/stations/show.html.slim
@@ -27,7 +27,39 @@
             td width='35%' style="border:#cccccc solid 1px;" = @station.comment
             td width='15%' style="border:#cccccc solid 1px;" 
               b Region
-            td width='35%' style="border:#cccccc solid 1px;" = @station.region_id
+            td width='35%' style="border:#cccccc solid 1px;" = @station.region
+.row
+  .col-md-12
+    .panel.panel-default
+      .panel-heading#operations
+        | 关联取送员
+      .panel-body
+        table.table.table-striped
+          thead
+            tr
+              th width='15%' 名字
+          tbody
+            - @station.couriers.each do |courier|
+              tr
+                td 
+                  = link_to courier.name, courier
+
+.row
+  .col-md-12
+    .panel.panel-default
+      .panel-heading#operations
+        | 关联工厂
+      .panel-body
+        table.table.table-striped
+          thead
+            tr
+              th width='15%' 名字
+          tbody
+            - @station.factories.each do |factory|
+              tr
+                td 
+                  = link_to factory.name, factory
+
 
 = link_to 'Edit', edit_station_path(@station)
 '  |
