--- a/XBB/Xqiye/app/views/layouts/_menu.html.erb
+++ b/XBB/Xqiye/app/views/layouts/_menu.html.erb
@@ -24,7 +24,7 @@
 		    				<%= link_to "总部管理<b class='caret'></b>".html_safe, '#', :class => 'dropdown-toggle', data: {toggle: 'dropdown'} %>
 		    				<ul class="dropdown-menu">
 		    					<li >
-		    						<%= link_to "开通城市",workeraccounts_path %>
+		    						<%= link_to "开通城市",cities_path %>
 		    					</li>
 		    					<li >
 		    						<%= link_to "品类",workeraccounts_path %>
