--- a/XBB/Xqiye/app/views/workeraccounts/edit.html.erb
+++ b/XBB/Xqiye/app/views/workeraccounts/edit.html.erb
@@ -1,9 +1,8 @@
 <h1>Edit</h1>
-<%= simple_form_for(@wrokeraccount,html: { method: :put }) do  |f|%>
+<%= simple_form_for(@wrokeraccount) do  |f|%>
 	<%= f.error_notification%>
 	<div class="form-inputs">
-	    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-	    <%= f.input :password_confirmation, required: true %>    
+	    <%= f.association :cities, as: :check_boxes%>   
 	</div>
 	<div class="form-acions">
 	<%= f.button :submit%>
