--- a/XBB/Xqiye/app/views/workeraccounts/new.html.erb
+++ b/XBB/Xqiye/app/views/workeraccounts/new.html.erb
@@ -5,7 +5,7 @@
 		<%= f.input :email, required: false, autofocus: true%>
 	    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
 	    <%= f.input :password_confirmation, required: true %>
-	    
+	    <%= f.association :cities, as: :check_boxes%>
 	</div>
 	<div class="form-acions">
 		<%= f.button :submit%>
