city message edit

--- a/XBB/Xqiye/app/views/workeraccounts/edit.html.erb
+++ b/XBB/Xqiye/app/views/workeraccounts/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit</h1>
-<%= simple_form_for(@wrokeraccount) do  |f|%>
+<%= simple_form_for(@workeraccount) do  |f|%>
 	<%= f.error_notification%>
 	<div class="form-inputs">
 	    <%= f.association :cities, as: :check_boxes%>   
