--- a/XBB/Xqiye/app/views/workeraccounts/edit.html.erb
+++ b/XBB/Xqiye/app/views/workeraccounts/edit.html.erb
@@ -4,6 +4,9 @@
 	<div class="form-inputs">
 	    <%= f.association :cities, as: :check_boxes%>   
 	</div>
+	 <div class="form-inputs">
+	    <%= f.association :roles, as: :check_boxes%>   
+	</div> 
 	<div class="form-acions">
 	<%= f.button :submit%>
 	</div>
