--- a/XBB/Xqiye/app/views/workeraccounts/index.html.erb
+++ b/XBB/Xqiye/app/views/workeraccounts/index.html.erb
@@ -8,6 +8,8 @@
 					<th>登录次数</th>
 					<th>上次登录时间</th>
 					<th>上次登录IP</th>
+					<th>角色</th>>
+					<th>负责城市</th>>
 					<th></th>
 				</tr>
 			</thead>
@@ -18,6 +20,8 @@
 					<td><%= account.sign_in_count%></td>
 					<td><%= account.last_sign_in_at%> </td>
 					<td><%= account.last_sign_in_ip%> </td>
+				    <td><%= account.roles.map(&:display_name).join(',')%> </td>
+				    <td><%= account.cities.map(&:name).join(',')%> </td> 
 					<td></td>
 					<td><%= link_to '修改密码',reset_password_workeraccount_path(account)%></td>
 					<td><%= link_to '修改',edit_workeraccount_path(account)%></td>
