price,category,product

--- a/XBB/Xqiye/app/views/layouts/_menu.html.erb
+++ b/XBB/Xqiye/app/views/layouts/_menu.html.erb
@@ -27,8 +27,12 @@
 		    						<%= link_to "开通城市",cities_path %>
 		    					</li>
 		    					<li >
-		    						<%= link_to "品类",workeraccounts_path %>
+		    						<%= link_to "品类",categories_path %>
 		    					</li>
+		    					<li >
+		    						<%= link_to "价格管理",prices_path %>
+		    					</li>
+
 		    				</ul>
 		    			</li>
 		    			<li class="dropdown">
