--- a/XBB/Xqiye/app/views/worker_messages/index.html.erb
+++ b/XBB/Xqiye/app/views/worker_messages/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>员工信息</h1>
 
-<table width="800px" border="1">
+<table class="table table table-striped">
   <thead>
     <tr>
       <th>Worker</th>
