--- a/XBB/Xqiye/app/views/cities/_form.html.slim
+++ b/XBB/Xqiye/app/views/cities/_form.html.slim
@@ -4,6 +4,7 @@
   .form-inputs
   	= f.input :name
   	= f.association :region, collection:[]
+    = f.association :categories, as: :check_boxes
 
   .form-actions
     = f.button :submit
