--- a/XBB/Xqiye/app/views/price_rules/index.html.slim
+++ b/XBB/Xqiye/app/views/price_rules/index.html.slim
@@ -1,4 +1,5 @@
- current_city.categories.each do |category|
+
+- current_city.categories.each do |category|
   .panel.panel-default
     .panel-heading
       = category.name
