--- a/XBB/Xqiye/app/views/layouts/_menu.html.erb
+++ b/XBB/Xqiye/app/views/layouts/_menu.html.erb
@@ -23,6 +23,9 @@
 		    			<li class="dropdown">
 		    				<%= link_to "总部管理<b class='caret'></b>".html_safe, '#', :class => 'dropdown-toggle', data: {toggle: 'dropdown'} %>
 		    				<ul class="dropdown-menu">
+		    				<li >
+		    						<%= link_to "价格管理",price_rules_path %>
+		    					</li>
 		    					<li >
 		    						<%= link_to "开通城市",cities_path %>
 		    					</li>
@@ -38,6 +41,9 @@
 		    			<li class="dropdown">
 		    				<%= link_to "分城市管理<b class='caret'></b>".html_safe, '#', :class => 'dropdown-toggle', data: {toggle: 'dropdown'} %>
 		    				<ul class="dropdown-menu">
+		    				<li >
+		    						<%= link_to "价格管理",price_rules_path %>
+		    					</li>
 		    					<li >
 		    						<%= link_to "驿站",stations_path %>
 		    					</li>
@@ -51,15 +57,48 @@
 		    			</li>
 		    			
 		    		</ul>
-		    		<ul class="nav navbar-nav ieCss pull-right" role="presentation" >
-						<span style="font-size:14px; color:#777" >
-						<%= current_workeraccount.email %>
-			    		<%= link_to "退出登陆",  destroy_workeraccount_session_path , method: :delete %>
-				        </span>
-				    </ul>
-		    	</div>
-		    	
-		    	
+
+		   	
+		    	<ul class="nav navbar-nav ieCss pull-right">
+		    	    <div class="dropdown">
+				    <span style="font-size:14px; color:#777" >
+						  <%= current_workeraccount.email%> </span>
+					<button class="btn dropdown="toggler" data-toggle="dropdown" style="background: none" type="button">&#9660</button>
+					<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+					    <li role="presentation">
+					       <%= link_to "退出登陆",  destroy_workeraccount_session_path , method: :delete %>
+					    	
+					    </li>
+					</ul>
+					</div>
+ 
+				</ul>
+				    
+		    	<%if current_city%>
+			    <ul class="nav navbar-nav ieCss pull-right" role="presentation" >
+			    	<div class="dropdown">
+			    	   <span style="font-size: 14px; color: #777">
+			    	        <%= current_city['name']%>
+			    	        </span>
+			    	        <button class="btn dropdown="toggler" data-toggle="dropdown" style="background: none" type="button">&#9660
+			    	      	
+			    	        </button>
+			    	        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+			    	        	<%current_workeraccount.cities.each do |city|%>
+			    	         <li role="presentation">
+			    	          <%=link_to city.name, change_current_city_workeraccount_path(city), method: :put %>
+			    	          </li>
+			    	        	<%end%>
+
+			    	        </ul>
+			    	</div>
+			    	</ul>
+		    	    <%end%>
+		    	 
+		 
+		       
+		    	         
+
 	    	<%end%>
 	    </div>
     </div>
