--- a/XBB/Xqiye/app/views/products/_product.html.slim
+++ b/XBB/Xqiye/app/views/products/_product.html.slim
@@ -1,6 +1,7 @@
 tr
   td = product.name
-  td 
+  td = image_tag qiniu_url(product.logo), size: '150x150'
   td = product.is_del
+  td = product.price.send("price#{price_rule.grade}")
   td = link_to 'Edit', edit_category_product_path(@category, product)
   td = link_to 'Destroy', category_product_path(@category, product), data: { confirm: 'Are you sure?' }, method: :delete
