--- a/XBB/Xqiye/app/views/layouts/_menu.html.erb
+++ b/XBB/Xqiye/app/views/layouts/_menu.html.erb
@@ -44,18 +44,37 @@
 		    						<%= link_to "工厂",factories_path %>
 		    					</li>
 		    				</ul>
-		    			</li>
-		    			
+		    			</li>		    			
 		    		</ul>
 		    		<ul class="nav navbar-nav ieCss pull-right" role="presentation" >
-						<span style="font-size:14px; color:#777" >
-						<%= current_workeraccount.email %>
-			    		<%= link_to "退出登陆",  destroy_workeraccount_session_path , method: :delete %>
-				        </span>
+		    			<div class="dropdown" >
+						<span style="font-size:14px; color:#777" ><%= current_workeraccount.email %></span>
+						<button class="btn dropdown-toggler" data-toggle="dropdown" style="background:none" type="button">▼</button>
+			    		<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">	
+			    			<li role="presentation">
+			    				<%= link_to "退出登陆",  destroy_workeraccount_session_path , method: :delete %>
+			    			</li>
+			    		</ul>
+						</div>  
 				    </ul>
-		    	</div>
-		    	
-		    	
+				    <%if current_city%>
+				    <ul class="nav navbar-nav ieCss pull-right" role="presentation">
+				    	<div class="dropdown" >
+				    		<span style="font-size:14px; color:#777">
+				    			<%= current_city['name']%>
+				    		</span>
+				    		<button class="btn dropdown-toggler" data-toggle="dropdown" style="background:none" type="button">▼</button>
+				    		<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+				    			<% current_workeraccount.cities.each do |city|%>
+				    			<li role="presentation">
+				    				<%= link_to city.name, change_current_city_workeraccount_path(city), method: :put %>
+				    			</li>
+				    			<% end%>
+				    		</ul>
+				    	</div>
+				    </ul>
+				    <%end%>
+		    	</div>		    	
 	    	<%end%>
 	    </div>
     </div>
