fix some bugs00

--- a/XBB/Xqiye/app/views/price_rules/show.html.slim
+++ b/XBB/Xqiye/app/views/price_rules/show.html.slim
@@ -9,7 +9,7 @@ row
         table.table.table-striped
           tr
             td width='15%' City
-            td width='35%' = @price_rule.city.name
+            td width='35%' = @price_rule.city
             td width='15%' Category
             td width='35%' = @price_rule.category.name
           tr
