--- a/XBB/Xqiye/app/views/prices/index.html.slim
+++ b/XBB/Xqiye/app/views/prices/index.html.slim
@@ -1,21 +1,17 @@
-h1 品类价目
+.panel.panel-default
+  .panel-heading
+    | 品类价目
+  .panel-body
+    table.table.table-striped
+      thead
+        tr
+          th Name
+          th
 
-table border='1'
-  thead
-    tr 
-            th width='80%'  heigth='20px' Name
-            th width='20%'  
-            th width='50%' 
-            th width='5%' 
-            th width='5%' 
-
-  tbody
-   - @categories.each do |category|
+      tbody
+        - @categories.each do |category|
           tr
             td = category.name
             td = link_to '价目表', prices_category_path(category)
 
-    
-br
-
-= link_to 'New Price', new_price_path
+    = will_paginate @categories, renderer: BootstrapPagination::Rails
