--- a/XBB/Xqiye/app/views/workeraccounts/index.html.erb
+++ b/XBB/Xqiye/app/views/workeraccounts/index.html.erb
@@ -1,7 +1,7 @@
 <div  class="panel panel-default">
 	<div class="panel-heading">操作员</div>
 	<div class="panel-body">
-		<table class="table table table-striped" width='600px'>
+		<table class="table table table-striped">
 			<thead>
 				<tr>
 					<th>登录邮箱</th>
