--- a/XBB/Xqiye/app/views/layouts/_menu.html.erb
+++ b/XBB/Xqiye/app/views/layouts/_menu.html.erb
@@ -56,6 +56,12 @@
 			    					<li >
 			    						<%= link_to "工厂",factories_path %>
 			    					</li>
+			    					<li >
+			    						<%= link_to "用户",users_path %>
+			    					</li>
+			    					<li >
+			    						<%= link_to "订单",orders_path %>
+			    					</li>
 			    				</ul>
 			    			</li>		    			
 			    		<%end%>	
