--- a/XBB/Xyonghu/app/views/categories/_form.html.slim
+++ b/XBB/Xyonghu/app/views/categories/_form.html.slim
@@ -1,7 +1,8 @@
-= simple_form_for(@category) do |f|
-  = f.error_notification
+.container
+	= simple_form_for(@category) do |f|
+	  = f.error_notification
 
-  .form-inputs
+	  .form-inputs
 
-  .form-actions
-    = f.button :submit
+	  .form-actions
+	    = f.button :submit
