--- a/XBB/Xyonghu/app/views/orders/edit.html.slim
+++ b/XBB/Xyonghu/app/views/orders/edit.html.slim
@@ -1,8 +1,9 @@
-h1 Editing order
+.container
+	h1 Editing order
 
-== render 'form'
+	== render 'form'
 
-= link_to 'Show', @order
-'  |
-= link_to 'Back', orders_path
+	= link_to 'Show', @order
+	'  |
+	= link_to 'Back', orders_path
 
