--- a/XBB/Xyonghu/app/views/orders/_form.html.slim
+++ b/XBB/Xyonghu/app/views/orders/_form.html.slim
@@ -1,9 +1,20 @@
-= simple_form_for(@order) do |f|
-  = f.error_notification
+.left_menu
+	.menu_son
+		=link_to 'MyAddreses', addresses_path
+	.menu_son
+		=link_to 'MyOrders' ,orders_path
+	.menu_son
+		=link_to 'MyMessages' 
 
-  .form-inputs
-  	=f.association :category
-  	=f.association :address,collection: current_user.address
+.container
+	= simple_form_for(@order) do |f|
+	  = f.error_notification
 
-  .form-actions
-    = f.button :submit
+	  .form-inputs
+	  	=f.association :category
+	  	=f.association :address,collection:current_user.addresses
+
+	  	
+
+	  .form-actions
+	    = f.button :submit
