--- a/XBB/Xyonghu/app/views/orders/show.html.slim
+++ b/XBB/Xyonghu/app/views/orders/show.html.slim
@@ -1,6 +1,7 @@
-p#notice = notice
+.container
+	p#notice = notice
 
 
-= link_to 'Edit', edit_order_path(@order)
-'  |
-= link_to 'Back', orders_path
+	= link_to 'Edit', edit_order_path(@order)
+	'  |
+	= link_to 'Back', orders_path
