--- a/XBB/Xyonghu/app/views/layouts/_menu.html.erb
+++ b/XBB/Xyonghu/app/views/layouts/_menu.html.erb
@@ -1,4 +1,40 @@
+<section id="home">
+	<div id="mycarousel" class="carousel slide" data-ride="carousel">
+	  <!-- Indicators -->
+	  <ol class="carousel-indicators">
+	    <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+	    <li data-target="#mycarousel" data-slide-to="1"></li>
+	    <li data-target="#mycarousel" data-slide-to="2"></li>
+	    <li data-target="#mycarousel" data-slide-to="3"></li>
+	  </ol>
 
+	  <!-- Wrapper for slides -->
+	  <div class="carousel-inner" role="listbox">
+	    <div class="item active">
+	      <img src="wash1.jpg" alt="first">
+	    </div>
+	    <div class="item">
+	      <img src="wash2.jpg" alt="second">
+	    </div>
+	    <div class="item">
+	      <img src="wash3.jpg" alt="second">
+	    </div>
+	    <div class="item">
+	      <img src="T-shirt.jpg" alt="second">
+	    </div>    
+	  </div>
+
+	  <!-- Controls -->
+	  <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+	    <span class="glyphicon glyphicon-chevron-left"></span>
+	    <span class="sr-only">Previous</span>
+	  </a>
+	   <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+	    <span class="glyphicon glyphicon-chevron-right"></span>
+	    <span class="sr-only">Next</span>
+	   </a> 
+	</div>
+</section>
 <nav class="navbar navbar-default " role="navigation" >
 	<div class="navbar-static-top">
 	    <div class="container" style="background:#F8F8F8">
